# stratlogic-scrape

./: .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_STATUS.md  Dockerfile  PHASE_1_SUMMARY.md  README.md  TASK_02_COMPLETE.md  alembic.ini  docker-compose.application.yml  docker-compose.deps.yml  docker-compose.override.yml.bak  docker-compose.prod.yml  docker-compose.yml  env.development  env.example  google_search_best_practices.md  litellm-config.yaml  phase2_summary.md  pyproject.toml  pytest.ini  requirements.txt  requirements_current.txt  requirements_venv.txt  requirements_windows.txt  ssl_issue_analysis.md  test_litellm_integration.py  test_phase2.py  test_phase2_core.py  test_phase2_simple.py
config/: database.py  database_optimized.py  minio.py  redis.py  redis_optimized.py
docs/: CONFIGURATION.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  MINIO_STORAGE.md  additional-scraping-sources.md  database-schema.md  development-setup.md  docker-setup.md  stealth-integration.md
examples/: government_scraper_example.py  paper_scraper_example.py  web_scraper_example.py
frontend/: README.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: dashboard.tsx  header.tsx  providers.tsx  sidebar.tsx
frontend/src/hooks/: use-auth.ts  use-documents.ts  use-jobs.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 0ee58a7db0c9_initial_migration.py  80dd95826b87_add_max_results_field_to_scrapingjob.py
scripts/: create_test_artifacts.py  dev-deps.ps1  dev-deps.sh  init-db.sql  install_playwright.py  install_stealth.py  minio-init.sh  seed_data.py  start.sh  test_database.py  test_litellm_config.py  test_setup.py  test_stealth.py  test_stealth_direct.py  test_stealth_simple.py  verify_setup.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/dependencies/: auth.py
src/api/middleware/: cors.py  error_handling.py  security.py
src/api/routers/: artifacts.py  auth.py  government_scraper.py  jobs.py  paper_scraper.py  users.py  web_scraper.py
src/api/routes/: __init__.py  artifacts.py  auth.py  content_processing.py  jobs.py  monitoring.py  performance.py  search.py  security.py  users.py
src/api/schemas/: artifact_schemas.py  audit_schemas.py  auth_schemas.py  job_schemas.py  metadata_schemas.py  system_schemas.py  user_schemas.py
src/auth/: __init__.py  jwt.py  models.py  password.py
src/core/: __init__.py  celery_app.py  config.py  database.py  database_manager.py  exceptions.py  health_checks.py  logging.py  models.py  security.py  utils.py
src/core/models/: __init__.py  artifact.py  audit.py  content_processing.py  job.py  metadata.py  monitoring.py  search.py  security.py  system.py  user.py
src/core/repositories/: __init__.py  base.py  job.py  user.py
src/scrapers/: __init__.py
src/scrapers/government_scraper/: README.md  __init__.py  api_client.py  config.py  document_processor.py  government_scraper.py  website_crawler.py
src/scrapers/paper_scraper/: README.md  __init__.py  arxiv_client.py  config.py  content_analyzer.py  crossref_client.py  grobid_client.py  paper_scraper.py
src/scrapers/web_scraper/: README.md  __init__.py  config.py  content_extractor.py  keyword_expander.py  playwright_manager.py  search_engines.py  web_scraper.py
src/services/: analytics_service.py  artifact_service.py  audit_service.py  content_enrichment.py  document_processing.py  export_service.py  job_service.py  llm_service.py  logging_service.py  metadata_service.py  monitoring_service.py  performance_service.py  search_service.py  security_service.py  system_service.py  user_service.py
src/storage/: __init__.py  access_control.py  artifact_storage.py  metadata_manager.py  minio_client.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_content_processing.py  test_database.py  test_integration.py  test_minio.py  test_models.py  test_monitoring.py  test_performance.py  test_repositories.py  test_search.py  test_security.py  test_storage.py
tests/api/: conftest.py  test_api_structure.py  test_artifacts.py  test_auth.py  test_error_handling.py  test_health.py  test_jobs.py  test_users.py
tests/core/: test_config.py
tests/scrapers/: __init__.py
tests/scrapers/government_scraper/: __init__.py  test_government_scraper.py
tests/scrapers/paper_scraper/: __init__.py  conftest.py  test_paper_scraper.py
tests/scrapers/web_scraper/: README.md  __init__.py  conftest.py  run_tests.py  test_config.py  test_content_extractor.py  test_integration.py  test_playwright_manager.py  test_web_scraper.py  (+3 more)
tests/services/: test_job_service.py
tests/storage/: conftest.py  test_access_control.py  test_artifact_storage.py  test_integration.py  test_minio_client.py
todo/: 00-master-todo.md  01-project-setup.md  02-database-schema.md  03-minio-storage.md  04-api-endpoints.md  05-authentication.md  06-web-scraper.md  07-paper-scraper.md  08-government-scraper.md  09-frontend.md  10-advanced-features.md  10-phase-4-advanced-features.md  11-integration-testing.md  12-deployment.md  13-documentation.md  phase-3-summary.md
todo/progress/: DOCKER_COMPOSE_SPLIT_COMPLETE.md  FRONTEND_DEVELOPMENT_COMPLETE.md  GOVERNMENT_SCRAPER_IMPLEMENTATION_COMPLETE.md  PAPER_SCRAPER_IMPLEMENTATION_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PROJECT_REORGANIZATION_COMPLETE.md  README.md  TASK_10_1_COMPLETE.md  TASK_10_2_COMPLETE.md  TASK_10_3_COMPLETE.md  TASK_10_4_COMPLETE.md  TASK_10_5_COMPLETE.md  TASK_10_6_COMPLETE.md  WEB_SCRAPER_IMPLEMENTATION_COMPLETE.md
(+17 files in other folders)
